# MynX

./: .gitignore  pyproject.toml  requirements.txt
app/: main.py
app/agents/: react_agent.py
app/api/: routes.py
app/core/: config.py  logger.py
app/memory/: hybrid_memory.py  memory_manager.py  postgres_memory.py
app/models/: llm_model.py
app/rag/: ingest.py  rag_service.py  retriever.py  vector_store.py
app/schemas/: request_schema.py  response_schema.py
app/tools/: rag_tool.py  tavily_tool.py  tool_registry.py  weather_tool.py  web_search_tool.py
frontend/static/css/: style.css
frontend/static/js/: chat.js
frontend/templates/: chat.html
tests/: test_agent.py  test_llm.py  test_stream.py
