[project]
name = "ai-agent-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "google-search-results>=2.4.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.10",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.10",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyowm>=3.5.0",
    "python-dotenv>=1.2.2",
    "redis>=7.3.0",
    "serpapi>=0.1.5",
    "tavily-python>=0.7.22",
    "uvicorn>=0.41.0",
    "psycopg2-binary>=2.9.9",
    "faiss-cpu>=1.13.2",
    "sentence-transformers>=5.4.1",
    "pypdf>=6.10.2",
    "python-docx>=1.2.0",
    "unstructured>=0.22.21",
    "langchain-text-splitters>=1.1.1",
    "langchain-huggingface>=1.2.2",
]
